[tool.poetry]
name = "bwm"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.1.2"
python-dotenv = "^0.20.0"
Flask-SQLAlchemy = "^2.5.1"
alembic = "^1.9.2"
Flask-Migrate = "^3.1.0"
mysqlclient = "^2.1.1"
Flask-Cors = "^3.0.10"
Flask-Session = "^0.4.0"
redis = "^4.4.2"
Flask-RESTful = "^0.3.9"
marshmallow = "^3.19.0"
Flask-Bcrypt = "^1.0.1"
Flask-JWT-Extended = "^4.4.4"
celery = {extras = ["redis"], version = "^5.2.7"}
Flask-Babel = "^2.0.0"
Flask-Caching = "^2.0.2"

[tool.poetry.dev-dependencies]
pytest = "^7.1"
black = "^22.3.0"
ipython = "^8.4.0"
flask-shell-ipython = "^0.4.1"
pre-commit = "^3.2.2"
flake8 = "^4.0.1"
isort = "^5.10.1"
nplusone = "^1.0.0"

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
